# my_shell

./: .gitignore  CMakeLists.txt
include/: builtins.h  command.h  executor.h  parser.h
src/: builtins.cpp  executor.cpp  main.cpp  parser.cpp
tests/: test__parser_tokenize.cpp  test_parser.cpp
